report updated with Rocio's comments

--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -1,5 +1,12 @@
 % A partir de aquí, páginas web:
 
+@online{decimer,
+  title = {DECIMER GitHub},
+  author = "Rajan, Kohulan and Zielesny, Achim and Steinbeck, Christoph",
+  url = {https://github.com/Kohulan/DECIMER-Image_Transformer},
+  urldate = {2022-03-01}
+}
+
 @online{metodologiasDesarrollo,
   title = {Metodologías de desarrollo de software: ¿qué son?},
   author = "Santander Universidades",
