--- a/report/capitulos/02_Planificacion.tex
+++ b/report/capitulos/02_Planificacion.tex
@@ -31,15 +31,9 @@ Revisando las distintas metodologías \cite{despa2014comparative}, creo que una 
     \item \textbf{Colaboración:} La colaboración entre todos los miembros del equipo es muy alta, así como entre el equipo y entidades externas como el cliente.
 \end{itemize}
 
-Cuando se trabaja con esta metodología, en cada equipo existe un miembro conocido como SCRUM manager. Es el encargado de guiar al equipo en el desarrollo y en la aplicación de la metodología. En SCRUM el equipo es muy importante y todos sus miembros participan con su opinión. Esta metodología consta de las siguientes fases \cite{schwaber1997scrum}:
+Cuando se trabaja con esta metodología, en cada equipo existe un miembro conocido como SCRUM manager. Es el encargado de guiar al equipo en el desarrollo y en la aplicación de la metodología. En SCRUM el equipo es muy importante y todos sus miembros participan con su opinión. Esta metodología consta de las siguientes fases \cite{schwaber1997scrum}, resumidas también en la Figura \ref{fig:scrum}:
 
 % TODO: Si fuera necesario, añadir información sobre los tipos de equipos. En el paper de SCRUM aparece información sobre estos.
-
-\begin{figure}[H]
-\centering
-    \fbox{\includegraphics[scale=0.45]{imagenes/scrum.png}}  
-    \caption{Fases de la metodología SCRUM \cite{schwaber1997scrum}} \label{fig:figura1}
-\end{figure}
 
 \begin{itemize}
     \item \textbf{Pregame:} 
@@ -63,6 +57,13 @@ Cuando se trabaja con esta metodología, en cada equipo existe un miembro conoci
 \end{itemize}
 
 Estas características y fases que hemos mencionado son las especificadas en la definición original de SCRUM. Aún así, en la práctica cada proyecto las adapta a sus necesidades. En general, los sprints suelen tener una duración de 2 o 3 semanas. 
+
+\begin{figure}[H]
+\centering
+    \fbox{\includegraphics[scale=0.4]{imagenes/scrum.png}}  
+    \caption{Fases de la metodología SCRUM. \cite{schwaber1997scrum}} 
+    \label{fig:scrum}
+\end{figure}
 
 \section{Planificación} \label{planificacion}
 Para lograr cumplir con los objetivos, se planifican las siguientes tareas a realizar:
@@ -88,12 +89,13 @@ Para lograr cumplir con los objetivos, se planifican las siguientes tareas a rea
 
 Para el éxito del proyecto es necesario asignar una temporización razonable a cada tarea. Este se realiza en el marco de un Trabajo de Fin de Grado (TFG): en la Universidad de Granada está cuantificado en 12 créditos, lo que significan 300 horas de trabajo. Creemos que los objetivos propuestos son adecuados para ser realizados en ese número de horas, sin ser excesivos ni escasos.
 
-Los TFGs se suelen realizar en un único cuatrimestre, que normalmente coincide con el último del grado. Esto significa cuatro meses en los que repartir las 300 horas, desde marzo hasta junio. Bien es cierto que este proyecto se empezó con algo de anterioridad, en febrero, para comenzar a profundizar en la literatura y conocer de forma más precisa las necesidades de los investigadores de Negev.
+Los TFGs se suelen realizar en un único cuatrimestre, que normalmente coincide con el último del grado. Esto significa cuatro meses en los que repartir las 300 horas, desde marzo hasta junio. Bien es cierto que este proyecto se empezó con algo de anterioridad, en febrero, para comenzar a profundizar en la literatura y conocer de forma más precisa las necesidades de los investigadores de Negev. En la Figura \ref{fig:gantt} se resume la distribución temporal de cada tarea.
 
 \begin{figure}[H]
 \centering
     \fbox{\includegraphics[scale=0.38]{imagenes/gantt.png}}  
-    \caption{Diagrama de Gantt con la temporización de las tareas.} \label{fig:figura1}
+    \caption{Diagrama de Gantt con la temporización de las tareas.} 
+    \label{fig:gantt}
 \end{figure}
 
 \section{Gestión de recursos}
