--- a/report/prefacios/prefacio.tex
+++ b/report/prefacios/prefacio.tex
@@ -14,12 +14,12 @@ Pedro Bedmar López\\
 \end{center}
 
 %\vspace{0.7cm}
-\noindent{\textbf{Palabras clave}: palabra\_clave1, palabra\_clave2, palabra\_clave3, ......}\\
+\noindent{\textbf{Palabras clave}: cheminformatics, aprendizaje profundo, balanceo de conjuntos de datos, clasificación binaria, modelos generativos profundos}
 
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
 
-Poner aquí el resumen.
+Con el desarrollo de la informática y del aprendizaje profundo, ramas científicas como la química han aplicado sus métodos dando lugar a lo que se conoce como \textit{cheminformatics}. Dentro de esta ciencia para los investigadores es importante poseer un modelo que, aplicado sobre imágenes encontradas en publicaciones científicas, les permita clasificar aquellas que presentan estructuras químicas de las que no. Este proyecto propone entrenar un clasificador que separe este tipo de imágenes. Para ello, se llevarán a cabo pruebas con diferentes arquitecturas e hiperparámetros seleccionando los más adecuados. El conjunto de datos de entrenamiento habrá sido previamente refinado y adaptado a esta tarea, habiéndole añadido \textit{hard negatives} creados a partir de un modelo generativo de forma que se mejore la eficacia del clasificador.
 \cleardoublepage
 
 
@@ -34,18 +34,12 @@ Pedro Bedmar López\\
 \end{center}
 
 %\vspace{0.7cm}
-\noindent{\textbf{Keywords}: Keyword1, Keyword2, Keyword3, ....}\\
+\noindent{\textbf{Keywords}: cheminformatics, deep learning, dataset balancing, binary classification, deep generative models}\\
 
 \vspace{0.7cm}
 \noindent{\textbf{Abstract}}\\
 
-Write here the abstract in English.
-
-
-
-\begin{flushright}
-Granada, a 7 de julio de 2022.
-\end{flushright}
+With the development of computer science and deep learning, scientific disciplines such as chemistry have applied their techniques, resulting in what is known as \textit{cheminformatics}. Within this field, it is important for researchers to have a model that, when applied to images found in scientific publications, allows them to classify those that present chemical structures from those that don't. This project proposes a classifier which separates these two classes. To do so, tests will be carried out testing different architectures and hyperparameters, selecting the most suitable ones. The training dataset will have been previously refined and adapted to this task, having added \textit{hard negatives} created from a generative model in order to improve the classifier effectiveness.
 
 
 \chapter*{}
@@ -76,12 +70,3 @@ Y para que conste, expide y firma el presente informe en Granada a 7 de julio de
 \vspace{5cm}
 
 \noindent \textbf{Rocío Celeste Romero Zaliz}
-
-\chapter*{Agradecimientos}
-\thispagestyle{empty}
-
-       \vspace{1cm}
-
-
-Poner aquí agradecimientos...
-
